--- a/platformio.ini
+++ b/platformio.ini
@@ -10,6 +10,9 @@
 
 [env:esp32doit-devkit-v1]
 platform = espressif32
-board = esp32doit-devkit-v1
+board = az-delivery-devkit-v4
 framework = arduino
-lib_deps = teckel12/NewPing@^1.9.7
+lib_deps = 
+	teckel12/NewPing@^1.9.7
+	adafruit/DHT sensor library@^1.4.6
+	newpin
